--- a/memoryGame.html
+++ b/memoryGame.html
@@ -6,7 +6,7 @@
     <!-- my Styles -->
     <link rel="stylesheet" href="style.css">
 
-    <!-- my page Title -->
+    <!-- my Page Title -->
     <title>MemoryGame</title>
 </head>
 <body>
