All fliping. Just the flipback & matching missing

--- a/memoryGame.html
+++ b/memoryGame.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <!-- my Scripts -->
-    <script src="memoryGame.js"></script>
+    <script src="memoryGame.js" defer></script>
 
     <!-- my Styles -->
     <link rel="stylesheet" href="style.css">
@@ -9,7 +9,9 @@
     <!-- my Page Title -->
     <title>MemoryGame</title>
 </head>
+
 <body>
-    
+<!-- using DOM, therefore Empty body :-P -->
 </body> 
+
 </html>
