Flipping and matching /row, stiil need correction

--- a/memoryGame.html
+++ b/memoryGame.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html>
 <head>
     <!-- my Scripts -->
     <script src="memoryGame.js" defer></script>
@@ -9,7 +9,7 @@
     <!-- my Page Title -->
     <title>MemoryGame</title>
 </head>
-
+        
 <body>
 <!-- using DOM, therefore Empty body :-P -->
 </body> 
