flips and unflipping work

--- a/src/memoryGame.html
+++ b/src/memoryGame.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <!-- my Scripts -->
-    <script src="memoryGame.js" defer></script>
+    <script src="memoryGame.js" async></script>
 
     <!-- my Styles -->
     <link rel="stylesheet" href="style.css">
