--- a/memoryGame.html
+++ b/memoryGame.html
@@ -1,10 +1,10 @@
 <html>
 <head>
     <!-- my Scripts -->
-    <script src="memoryGame.js" defer></script>
+    <script src="./src/memoryGame.js" defer></script>
 
     <!-- my Styles -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./src/style.css">
 
     <!-- my Page Title -->
     <title>MemoryGame</title>
