--- a/memoryGame.html
+++ b/memoryGame.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
     <!-- my Scripts -->
     <script src="./src/memoryGame.js" defer></script>
@@ -9,9 +10,7 @@
     <!-- my Page Title -->
     <title>MemoryGame</title>
 </head>
-        
-<body>
-<!-- using DOM, therefore Empty body :-P -->
-</body> 
+
+<body></body>
 
 </html>
